2007-12-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/entity/ChartEntity.java
	(getImageMapAreaTag): Don't escape tooltips and urls, delegate that to 
	the tag generators,
	* source/org/jfree/chart/imagemap/StandardURLTagFragmentGenerator.java
	(generateURLFragment): Encode the url text,
	* tests/org/jfree/chart/imagemap/junit/ImageMapPackageTests.java: New file,
	* tests/org/jfree/chart/imagemap/junit/StandardToolTipTagFragmentGeneratorTests.java: 
	Likewise,
	* tests/org/jfree/chart/imagemap/junit/StandardURLTagFragmentGeneratorTests.java: 
	Likewise.

2007-12-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/JFreeChart.java
	(setTitle): Handle listener registration,
	* tests/org/jfree/chart/junit/JFreeChartTests.java
	(testTitleChangeEvents): New test method.

2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/imagemap/DynamicDriveToolTipFragmentGenerator.java
    (generateToolTipFragment): Escape text,
    * source/org/jfree/chart/imagemap/OverLIBToolTipFragmentGenerator.java
    (generateToolTipFragment): Likewise,
    * source/org/jfree/chart/imagemap/StandardToolTipFragmentGenerator.java
    (generateToolTipFragment): Likewise,
    * source/org/jfree/chart/imagemap/StandardURLTagFragmentGenerator.java
    (generateURLFragment): Likewise.

2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/AbstractRenderer.java
	(hashCode): Compute using more fields.

2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/JFreeChart.java
	(createBufferedImage(int, int, ChartRenderingInfo)): Change image type,
	(createBufferedImage(int, int, double, double, ChartRenderingInfo)): 
	Likewise. 

2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

	Bugs 1363043 and 1840139:
	* source/org/jfree/chart/entity/ChartEntity.java
	(getImageMapAreaTag): Escape toolTipText and urlText,