@@ -1,5 +1,12 @@
 2007-12-05  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/HashUtilities.java
+	(hashCode(int, BooleanList)): New method,
+	(hashCode(int, PaintList)): Likewise,
+	(hashCode(int, StrokeList)): Likewise.
+
+2007-12-05  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/entity/ChartEntity.java
 	(getImageMapAreaTag): Don't escape tooltips and urls, delegate that to 
 	the tag generators,
